fix game box overlap issue

--- a/src/assets/newtab/bottom-bar.css
+++ b/src/assets/newtab/bottom-bar.css
@@ -1,3 +1,16 @@
 .game-box {
   @apply w-10 h-8 bg-gray-500 text-white absolute -right-14 hidden md:inline-block text-xs rounded-md;
 }
+
+.game-box:nth-child(1) {
+  top: 20%;
+}
+.game-box:nth-child(2) {
+  top: 40%;
+}
+.game-box:nth-child(3) {
+  top: 60%;
+}
+.game-box:nth-child(4) {
+  top: 80%;
+}
